# DVR_ESS_PDM

./: CMakeLists.txt  README.md
configs/: config.ini  config_chameleon_demo_mode.ini  config_manix_demo_mode.ini  config_stagbeetle_demo_mode.ini
itfs/: itf1.itf  itf10.itf  itf2.itf  itf3.itf  itf4.itf  itf5.itf  itf6.itf  itf7.itf  itf8.itf  itf9.itf
libs_extern/glad/include/glad/: gl.h  glad.h
libs_extern/glad/src/: gl.c  glad.c
libs_extern/glfw/lib/Debug/: glfw3.lib
libs_extern/glfw/lib/Release/: glfw3.lib
shaders/: combine_PDMs.comp  compute_POM.comp  compute_distance_map.comp  compute_gradient_map.comp  compute_occupancy_map.comp  convert_volume_to_unorm.comp  fs_render_volume.glsl  vs_render_volume.glsl
src/: ITF.h  LaunchComputeShaders.cpp  LaunchComputeShaders.h  RenderGeometry.h  Volume.h
src/DVR_ESS_PDM/: CMakeLists.txt  DVR_ESS_PDM.cpp
src/common/: Camera.h  ComputeShaderSpirv.h  ShaderSpirv.h  TextureHelper.h
